# Hagane

./: .gitignore  Cargo.toml  README.MD
builder/: Cargo.toml
builder/src/: compressor.rs  iebuild.rs  main.rs  packer.rs
docs/: ERROR_CODES.md  LOGGING.md  TESTING.md  documentation.md  hagane.md
engine/src/: state.rs
engine/src/install/: files.rs  mod.rs  registry_ops.rs  services.rs
engine/src/parser/: mod.rs  schema.rs  validator.rs
engine/src/requirements/: disk.rs  registry.rs
hagane/: README.md  installer.yaml
hagane/payload/runtime/: Cargo.toml
hagane/payload/runtime/engine/: Cargo.toml
hagane/payload/runtime/engine/src/: ipc.rs  lib.rs  state.rs
hagane/payload/runtime/engine/src/install/: extractor.rs  mod.rs  registry_ops.rs  rollback.rs  shortcuts.rs
hagane/payload/runtime/engine/src/parser/: mod.rs  schema.rs  validator.rs
hagane/payload/runtime/engine/src/requirements/: memory.rs  mod.rs  os.rs  runner.rs
hagane/payload/runtime/runner/: Cargo.toml  build.rs
hagane/payload/runtime/ui/pages/: components.html  finish.html  install_dir.html  license.html  shell.html  summary.html
runner/: Cargo.toml  build.rs
runner/src/: main.rs  window.rs
sdk/example/: installer.yaml
sdk/example/docs/: LICENSE.txt  manual.txt
sdk/example/error-sim/: HG-COPY-001.yaml  HG-ENV-001.yaml  HG-EXTRACT-001.yaml  HG-EXTRACT-002.yaml  HG-PS-001.yaml  HG-PS-002.yaml  HG-PS-003.yaml  HG-PS-004.yaml  HG-PS-005.yaml  HG-REG-001.yaml  HG-REG-002.yaml  HG-RUN-001.yaml  HG-RUN-002.yaml  HG-VAR-001.yaml  HG-YAML-001.yaml  README.md
sdk/example/error-sim/payload/: sample.txt
sdk/example/payload/: app.txt
sdk/example/samples/: example.txt
sdk/schema/: installer.schema.json
ui/assets/: bridge.js  style.css
ui/pages/: error.html  progress.html  requirements.html  shell.html  user_info.html  welcome.html
