[package]
name = "builder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iebuild"
path = "src/iebuild.rs"

[[bin]]
name = "hagane"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
zstd = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
walkdir = "2"
tar = "0.4"
clap = { version = "4", features = ["derive"] }