[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
zstd = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
tar = "0.4"
uuid = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Services",
    "Win32_NetworkManagement_IpHelper",
] }

[lib]
name = "engine"
crate-type = ["rlib"]