[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "installer"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }

[target.'cfg(windows)'.dependencies]
# webview2-com 0.28 uses windows 0.52 internally — must match to avoid windows-core version conflicts
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Com",
    "Win32_System_Threading",
] }
webview2-com = "0.28"
webview2-com-sys = "0.28"

[build-dependencies]
# Embed manifest for UAC elevation request and DPI awareness
winres = "0.1"